# XiLi

./: .gitignore  K-means.py  LICENSE  README.md  average_growth_rate.py  binary_image.py  comprehensive_grouping_test.py  gradio_toolbox.py  kmeans.py  lda_evaluation.py  lda_model.py  legacy_scripts_baseline.md  linear_interpolation.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  snownlp_sentiment.py  snownlp_train.py  test_grouping.py  word_cloud.py  word_segmentation.py  yearly_average.py
archive/: README.md
archive/WIP/: comprehensive_grouping_test.py  debug_grouping.py  linear_interpolation.py  word_segmentation.py  文档分词.py
archive/legacy_root_scripts/: K-means.py  LDA模型.py  Snowlp训练模型.py  平均增长率.py  计算年份平均值.py  词云图.py  黑白图片.py
common/: __init__.py  cli_utils.py  run_context.py  run_summary.py
docs/: classification_report.md  cli_usage.md  data_policy.md  data_processing_summary.md  legacy_scripts.md  rename_map.md  reorg_plan.md  数据处理总结.md
legacy/cn/: LDA困惑度和一致性.py  LDA模型.py  SnowNLP情感分析.py  平均增长率.py  文档分词.py  熵权topsis法 - 以省份为分组 -年份.py  熵权topsis法---加入省份列.py  熵权topsis法-单省份.py  熵权topsis法-年份.py  秩和检验---分组.py  秩和检验.py  线性插值.py  计算年份平均值.py  词云图.py  黑白图片.py
legacy/en/: unified_rank_test.py  unified_ranktest.py  unified_topsis.py
scripts/entry/: main.py
tests/: reproduce_warning.py  test_average_growth_rate.py  test_cli_parsing_logic.py  test_entropy_topsis_refactor.py  test_gui_outputs_collection.py  test_logging_selfcheck.py  test_rank_tests_refactor.py
xili/: __init__.py  cli.py  entropy_topsis.py  rank_tests.py
(+24 files in other folders)
